# Gerisabet-AI

./: AGENTS.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
qdrant_storage/: raft_state.json
src/: App.tsx  interfaces.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: book_finder.rs  commands.rs  embeddings.rs  indexer_tracker.rs  lib.rs  main.rs  qdrant_db.rs
src-tauri/src/commands/: ai.rs  chat_history.rs  indexing_library.rs  indexing_logic.rs  indexing_skills.rs  mod.rs
src/components/: DatabaseManager.tsx  Drawer.tsx  DrawerChatHistory.tsx  DrawerIndexDatabase.tsx  DrawerIndexSkills.tsx  DrawerIndexing.tsx  GerisabetLoader.tsx  IndexerUI.tsx  SkillsManager.tsx  Title.tsx  index.ts
src/dashboard/: Displayer.tsx  History.tsx  index.ts
src/form/: Form.tsx  Input.tsx  index.ts
src/hooks/: useChatHistory.ts  useIndexer.ts
src/styles/: drawer.css  styles.css
src/types/: interfaces.ts
