[package]
name = "gerisabetai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# Importante para que Tauri funcione en móvil y escritorio
[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

# Dependencias de compilación
[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

# TUS LIBRERÍAS (Aquí estaba el fallo)
[dependencies]
jetscii = "0.5.3"
qdrant-client = "1.17.0"
uuid = { version = "1.22.0", features = ["v4", "v5"] }
tauri = { version = "2.10.1", features = [] }
tauri-plugin-opener = "2.5.3"                         # Plugin básico de Tauri v2
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.1", features = ["json"] } # Faltaba esta
glob = "0.3.3"                                          # Faltaba esta
pdf-extract = "0.10"                                  # Faltaba esta
tauri-plugin-dialog = "2.6.0"
docx-rs = "0.4.19"
